# empty-contract

./: Cargo.toml  README.md
.cargo/: config.toml
artifacts/: checksums.txt  empty_contract.wasm
src/: bitcoin.rs  contract.rs  lib.rs  msg.rs  test.rs
