[package]
name = "empty-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cosmwasm-std = { version = "1.0.0-beta8", features = ["staking"] }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
sha2 = "0.10"
ripemd = "0.1.3"
bech32 = "0.9"
hex = "0.4.3"

[dev-dependencies]
cw-multi-test = "0.13.4"